--- a/articles/governance/management-groups/index.yml
+++ b/articles/governance/management-groups/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 08/31/2020
-  ms.openlocfilehash: a2d736b2706b3b0958bb544c6d0e4434c78e6791
-  ms.sourcegitcommit: d68c72e120bdd610bb6304dad503d3ea89a1f0f7
+  ms.date: 09/30/2020
+  ms.openlocfilehash: 120e020a30daf377844ad9933a067def3360a399
+  ms.sourcegitcommit: ffa7a269177ea3c9dcefd1dea18ccb6a87c03b70
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "89231327"
+  ms.lasthandoff: 09/30/2020
+  ms.locfileid: "91597772"
 landingContent:
 - title: 关于 Azure 治理
   linkLists:
@@ -39,6 +39,10 @@ landingContent:
       url: ./create-management-group-azure-cli.md
     - text: 创建管理组 (Azure PowerShell)
       url: ./create-management-group-powershell.md
+    - text: 创建管理组 (.NET)
+      url: ./create-management-group-dotnet.md
+    - text: 创建管理组 (JavaScript)
+      url: ./create-management-group-javascript.md
     - text: 创建管理组 (REST)
       url: ./create-management-group-rest-api.md
     - text: 向管理组部署资源（ARM 模板）
