--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 09/24/2020
-  ms.openlocfilehash: 9f5117a43ce406603a3a691d59fb9f651ad20c7b
-  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
+  ms.date: 09/30/2020
+  ms.openlocfilehash: b407d2ced754297b4b61738b58f91f18f820907a
+  ms.sourcegitcommit: ffa7a269177ea3c9dcefd1dea18ccb6a87c03b70
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/25/2020
-  ms.locfileid: "91318426"
+  ms.lasthandoff: 09/30/2020
+  ms.locfileid: "91598320"
 landingContent:
 - title: 关于 Azure Policy
   linkLists:
@@ -47,6 +47,8 @@ landingContent:
       url: ./assign-policy-azurecli.md
     - text: 分配策略 (Azure PowerShell)
       url: ./assign-policy-powershell.md
+    - text: 分配策略 (.NET)
+      url: ./assign-policy-dotnet.md
     - text: 分配策略 (JavaScript)
       url: ./assign-policy-javascript.md
     - text: 分配策略 (Python)
@@ -81,6 +83,8 @@ landingContent:
       url: ./how-to/programmatically-create.md
     - text: 为数组创作策略
       url: ./how-to/author-policies-for-arrays.md
+    - text: 导出资源
+      url: ./how-to/export-resources.md
   - linkListType: concept
     links:
     - text: 合规性
