--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -28,6 +28,10 @@
       href: tutorial-custom-role-cli.md
 - name: 概念
   items:
+    - name: 角色定义
+      href: role-definitions.md
+    - name: 范围
+      href: scope-overview.md
     - name: 最佳做法
       href: best-practices.md
     - name: 用于 Azure 管理的条件访问
@@ -40,11 +44,7 @@
 - name: 操作指南
   items:
     - name: 列出角色定义
-      items:
-        - name: 概述
-          href: role-definitions.md
-        - name: 列出角色定义
-          href: role-definitions-list.md
+      href: role-definitions-list.md
     - name: 列出角色分配
       items:
         - name: 门户
@@ -57,6 +57,8 @@
           href: role-assignments-list-rest.md
     - name: 添加或删除角色分配
       items:
+        - name: 角色分配的添加步骤
+          href: role-assignments-steps.md
         - name: 门户
           href: role-assignments-portal.md
         - name: 门户 - 来宾用户
