--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -1025,6 +1025,8 @@
           href: lr-tutorial.md
         - name: Logz.io - Azure AD 集成
           href: logzio-cloud-observability-for-engineers-tutorial.md
+        - name: Loop Flow CRM
+          href: loop-flow-crm-tutorial.md
         - name: Lucidchart
           href: lucidchart-tutorial.md
         - name: Lynda.com
@@ -1215,6 +1217,8 @@
           href: oracle-peoplesoft-protected-by-f5-big-ip-apm-tutorial.md
         - name: OrgChart Now
           href: orgchartnow-tutorial.md
+        - name: OrgVitality SSO
+          href: orgvitality-sso-tutorial.md
         - name: Origami
           href: origami-tutorial.md
         - name: Otsuka Shokai
@@ -1613,6 +1617,8 @@
           href: sprinklr-tutorial.md
         - name: 用于 Oracle E Business Suite EBS、PeopleSoft 和 JDE 的 SSOGEN Azure AD SSO 网关
           href: ssogen-tutorial.md
+        - name: Starmind
+          href: starmind-tutorial.md
         - name: StatusPage
           href: statuspage-tutorial.md
         - name: Stormboard
@@ -1719,6 +1725,8 @@
           href: trakopolis-tutorial.md
         - name: Trakstar
           href: trakstar-tutorial.md
+        - name: TravelPerk
+          href: travelperk-tutorial.md
         - name: Trelica
           href: trelica-tutorial.md
         - name: Trello
@@ -1805,6 +1813,8 @@
           href: waywedo-tutorial.md
         - name: Wdesk
           href: wdesk-tutorial.md
+        - name: Web Cargo Air
+          href: web-cargo-air-tutorial.md
         - name: webMethods Integration Suite
           href: webmethods-integration-cloud-tutorial.md
         - name: Wedo
@@ -1960,6 +1970,8 @@
           href: brivo-onair-identity-connector-provisioning-tutorial.md
         - name: Cerner Central
           href: cernercentral-provisioning-tutorial.md
+        - name: Cinode
+          href: cinode-provisioning-tutorial.md
         - name: Cisco Webex
           href: cisco-webex-provisioning-tutorial.md
         - name: Coda
