--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: laurenhughes
   ms.author: lahugh
   ms.date: 07/21/2020
-  ms.openlocfilehash: 98d96c36e8ec801c2a8a5a87d0075f2d9b57bd98
-  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
+  ms.openlocfilehash: 9ce4a4e20f6d33880be5dbefe49c2d1d9e6e8c5d
+  ms.sourcegitcommit: f796e1b7b46eb9a9b5c104348a673ad41422ea97
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90984955"
+  ms.lasthandoff: 09/30/2020
+  ms.locfileid: "91568380"
 landingContent:
 - title: 关于 Azure Kubernetes 服务 (AKS)
   linkLists:
@@ -26,8 +26,6 @@ landingContent:
     links:
     - text: AKS 的 Kubernetes 核心概念
       url: concepts-clusters-workloads.md
-    - text: AKS 群集的基线体系结构
-      url: /azure/architecture/reference-architectures/containers/aks/secure-baseline-aks/
     - text: 群集和工作负荷
       url: concepts-clusters-workloads.md
     - text: 访问和标识
@@ -76,6 +74,18 @@ landingContent:
       url: tutorial-kubernetes-app-update.md
     - text: 7. 升级 AKS 中的 Kubernetes
       url: tutorial-kubernetes-upgrade-cluster.md
+- title: 体系结构指南
+  linkLists:
+  - linkListType: architecture
+    links:
+    - text: AKS 群集的基线体系结构
+      url: /azure/architecture/reference-architectures/containers/aks/secure-baseline-aks/
+    - text: AKS 解决方案
+      url: /azure/architecture/reference-architectures/containers/aks-start-here
+    - text: 面向群集操作员和开发人员的最佳做法
+      url: best-practices.md
+    - text: 查找最佳实践
+      url: kube-advisor-tool.md
 - title: 利用 Microsoft Learn 掌握技能
   linkLists:
   - linkListType: learn
